# esp32-components-azure-iot

./: README.adoc  nvs_factory.csv  partitions_4MB_nvs_ota.csv
components/azure_iot/: CMakeLists.txt  Kconfig.projbuild  azure_config.c  azure_config_nvs.c  azure_dps.c  azure_iot_hub.c  custom_hsm_x509.c
components/azure_iot/include/: azure_config.h  azure_dps.h  azure_iot_hub.h
components/device_config/: CMakeLists.txt  Kconfig.projbuild  device_config.c  device_config_nvs.c
components/device_config/include/: device_config.h
components/example_gpio/: CMakeLists.txt  Kconfig.projbuild  example_gpio.c
components/example_gpio/include/: example_gpio.h
components/ota_update_https/: CMakeLists.txt  Kconfig.projbuild  ota_update_https.c
components/ota_update_https/include/: ota_update_https.h
doc/: certificates.adoc  component_azure_iot.adoc  components.adoc  configuration.adoc  installation.adoc
